- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.0.2, 5.1.0
- 
    Mac OSX 10.8/ qt5
- 
        2e69015d74a903d7319dec164214b9f443980a08
deleteLater not triggered when closing option panel on mac, and thus the singleton assumption of the device manager fails.
This is a Qt5 bug, an ugly workaround would be to delete and re-create or  simply reuse when detecting an singleton in the creation of the panel.
- is required for
- 
                    QTBUG-30688 Qt 5.1 Beta 1 release tasks -         
- Closed
 
-         
- relates to
- 
                    QTBUG-24256 [QMacNativeWidget] show modal breaks Qt event loop: QObjects deleteLater events not processed -           
- Closed
 
-         
- 
                    QTCREATORBUG-8564 Qt Creator Crashes when launching "preferences" -           
- Closed
 
-         
- replaces
- 
                    QTCREATORBUG-8564 Qt Creator Crashes when launching "preferences" -           
- Closed
 
-         
- 
                    QTCREATORBUG-9004 Device settings page crashes when opened the second time -         
- Closed
 
-